--- a/project2.html
+++ b/project2.html
@@ -189,8 +189,6 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <p>For this part, my goal is to sharpen images. In order to sharpen an image, I apply Gaussian filter to get the low frequencies of the image. When the low frequencies are substracted from the original image, I get the high frequencies of the image. By adding the high frequencies to the original image, I sharpen the or
-        <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/galatasaray.jpg" alt="galatasaray.jpg">
             <p class="image-subtitle">Galatasaray players are celebrating defeating Fenerbahce</p>
@@ -201,7 +199,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <p>For evaluation, I attempted to sharpen an image after blurring it. I observed that sharpening process was not able to sharpen the blurred image to its original quality. Regardless of the value of the coefficient alpha, when an image is sharpened after being blurred, it becomes more noisy than the original and lose some of its details.</p>
+        <p>For evaluation, I attempted to sharpen an image after blurring it. I observed that sharpening process was not able to sharpen the blurred image to its original quality, regardless of the value of the coefficient alpha. When an image is blurred, it becomes more noisy than the original and lose some of its details that even sharpening cannot recover. </p>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/tt_arena.jpg" alt="tt_arena.jpg">
