--- a/project2.html
+++ b/project2.html
@@ -216,7 +216,7 @@
         </div>
         <div class="clear-float"></div>
         <h2>Part 2.2: Hybrid Images</h2>
-            <p>For this part, my goal is to create hybrid images that can be interpreted differently from different distances. In order to do this, I capture low frequency and high frequency of different images by passing the images through a Gaussian filter. High freqencies are captured by subtracting the image passed through the filter from its original image. The hybrid image is the average of both filtered images. I used color to enhance the effect of combining the images.</p>
+            <p>For this part, my goal is to create hybrid images that can be interpreted differently from different distances. In order to do this, I capture low frequency and high frequency of different images by passing the images through a Gaussian filter. High frequencies are captured by subtracting the image passed through the filter from its original image. The hybrid image is the average of both filtered images. I used color to enhance the effect of combining the images.</p>
         <div class="image-grid">
         <div class="image-container">
             <img src="proj2images/DerekPicture.jpg" alt="DerekPicture.jpg">
