--- a/project2.html
+++ b/project2.html
@@ -287,7 +287,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-    <p>For a failed one, I tried to make a hybrid of Gheorghe Hagi and Didier Drogba. Unfortunately, it wasn't very successful but I will use them for another technique again. </p>
+    <p>For a failed one, I tried to make a hybrid of Gheorghe Hagi and Didier Drogba. Unfortunately, it wasn't very successful but I will use them again for another technique. </p>
     <div class="image-grid">
         <div class="image-container">
             <img src="proj2images/hagi.jpg" alt="grayscale_tan.jpg">
