--- a/project2.html
+++ b/project2.html
@@ -304,7 +304,7 @@
         </div>
         <div class="clear-float"></div>
     <h2>Part 2.3: Gaussian and Laplacian Stacks</h2>
-            <p>For this part, my goal is to blend images. In order to blend, I created Gaussian stacks and Laplacian stacks for the images. The Laplacian stacks are formed by substracting the consecutive images in their Gaussian stacks. The last level of the Laplacian stack is the last level of the Gaussian stack so the Laplacian and Gaussian stacks have the same number of levels. I used size 18 and sigma = 3 Gaussian filters.</p>
+            <p>For this part, my goal is to blend images. In order to blend, I created Gaussian stacks and Laplacian stacks for the images. The Laplacian stacks are formed by substracting the consecutive images in their Gaussian stacks. The last level of the Laplacian stack is the last level of the Gaussian stack so the Laplacian and Gaussian stacks have the same number of levels. I used kernel_size = 18 and sigma = 3 for Gaussian filters.</p>
         <h2>Apple Gauss Stack</h2>
 <div class="image-g">
     <div class="image-container">
