--- a/project2.html
+++ b/project2.html
@@ -420,7 +420,7 @@
     <h2>Oraple</h2>
         <div class="image-gri">
         <div class="image-container">
-            <img src="proj2images/blended.jpg" alt="taj.jpg">
+            <img src="proj2images/oraple.jpg" alt="taj.jpg">
             <p class="image-subtitle">Oraple!</p>
         </div>
         <div class="image-container">
