--- a/project2.html
+++ b/project2.html
@@ -480,6 +480,7 @@
         </div>
         <div class="clear-float"></div>
     <h2>Early Halloween</h2>
+    <p>I think I could have achieved a better blending with a better mask but still it is early Halloween!</p>
     <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/jokerr_750.jpg" alt="grayscale_two_face.jpg">
