--- a/project3.html
+++ b/project3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: Fun with Filters and Frequencies!</title>
+    <title>Project 3: Face Morphing</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -85,12 +85,12 @@
     </style>
 </head>
 <body>
-    <h1>Project 2: Fun with Filters and Frequencies!</h1>
+    <h1>Project 3: Face Morphing</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
     <div class="Background">
         <h2>Background</h2>
-        <p>In this project, I focused on manipulating image frequencies to achieve various effects. I sharpened images by boosting high-frequency components, created hybrid images by combining high and low frequencies from different images, and blended images using Gaussian and Laplacian stacks.</p>
+        <p> In this project, I aim to successfully face morph Larry David to my roommate Can, whom we watch Curb Your Enthuasiasm together.</p>
     </div>
     
     <div class="project-overview">
