--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <h1>Welcome to My Portfolio!</h1>
     <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
     <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
+    <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
 </body>
 </html>
