--- a/project3.html
+++ b/project3.html
@@ -143,13 +143,13 @@
         0 & 0 & 1
         \end{bmatrix}
         \begin{bmatrix}
-        px_i \\
-        py_i \\
+        x_i \\
+        y_i \\
         1
         \end{bmatrix} =
         \begin{bmatrix}
-        qx_i \\
-        qy_i \\
+        x'_i \\
+        y'_i \\
         1
         \end{bmatrix}
         \]
@@ -160,8 +160,8 @@
     <div class="equation">
         \[
         \begin{aligned}
-        apx_i + bpy_i + c + 0d + 0e + 0f &= qx_i \\
-        0a + 0b + 0c + dpx_i + epy_i + f &= qy_i
+        ax_i + by_i + c + 0d + 0e + 0f &= x'_i \\
+        0a + 0b + 0c + dx_i + epy_i + f &= y'_i
         \end{aligned}
         \]
     </div>
@@ -171,12 +171,12 @@
     <div class="equation">
         \[
         \begin{aligned}
-        apx_1 + bpy_1 + c + 0d + 0e + 0f &= qx_1 \\
-        0a + 0b + 0c + dpx_1 + epy_1 + f &= qy_1 \\
-        apx_2 + bpy_2 + c + 0d + 0e + 0f &= qx_2 \\
-        0a + 0b + 0c + dpx_2 + epy_2 + f &= qy_2 \\
-        apx_3 + bpy_3 + c + 0d + 0e + 0f &= qx_3 \\
-        0a + 0b + 0c + dpx_3 + epy_3 + f &= qy_3
+        ax_1 + by_1 + c + 0d + 0e + 0f &= x'_1 \\
+        0a + 0b + 0c + dx_1 + ey_1 + f &= y'_1 \\
+        ax_2 + by_2 + c + 0d + 0e + 0f &= x'_2 \\
+        0a + 0b + 0c + dx_2 + ey_2 + f &= y'_2 \\
+        ax_3 + by_3 + c + 0d + 0e + 0f &= x'_3 \\
+        0a + 0b + 0c + dx_3 + ey_3 + f &= y'_3
         \end{aligned}
         \]
     </div>
