--- a/project3.html
+++ b/project3.html
@@ -130,8 +130,8 @@
     </script>
     <p> In order to compute the mid-way face, we need to find the affine transformation matrix that transforms original points in Larry and Can's images to points in each triangle in the average shape trinagulation. 
     <p>Let's say we have two triangles(one is from one of the original shapes, and one is from the average shape):</p>
-    <p>Original triangle has points $p_1, p_2, p_3$, with $(x_i, y_i) coordinates for each</p>
-    <p>Transformed triangle has points $q_1, q_2, q_3$ with $(x'_i, y'_i) coordinates for each </p>
+    <p>Original triangle has points $p_1, p_2, p_3$, with $(x_i, y_i)$ coordinates for each point</p>
+    <p>Transformed triangle has points $q_1, q_2, q_3$ with $(x'_i, y'_i)$ coordinates for each point</p>
     <p>Then, we can write the following matrix multiplication for the transformation operation, the 1s  appended for affine operations:</p>
     <div class="equation">
         \[
