--- a/project3.html
+++ b/project3.html
@@ -194,7 +194,7 @@
         \]
     </div>
 
-    <p>This system can be solved using computational software to find the values of a, b, c, d, e, and f, which define the affine transformation matrix.</p>
+    <p> Thus, we can use a linear algebra solver to find a, b, c, d, e, and f, and calculate the transformation matrix.</p>
 </html>
         <div class="clear-float"></div>
         <div class="image-gri">
