--- a/project3.html
+++ b/project3.html
@@ -206,7 +206,7 @@
         <h2>Part 3: The Morph Sequence</h2>
             <p> To produce the morphing sequence, I applied the previous procedure for finding the mid-way face with different warp and dissolve fractions. To create 45 frames, I increase the fractions by 1/45 for each frame. Dissolve fraction determines the weight of source image for the final image while taking the average of the source images. Warp fraction determines how close the shape of final image will be to the source image. Here is a gif with 45 frames for transforming Larry David to Can:</p>
         <div class="clear-float"></div>
-        <div class="image-gri">
+        <div class="image-gr">
         <div class="image-container">
             <img src="proj3images/larrycan.gif" alt="taj.jpg">
             <p class="image-subtitle">Larry David to Can Ruso</p>
@@ -214,7 +214,7 @@
         </div>
         <div class="clear-float"></div>
         <p> I also applied the morphing sequence to my father and myself. It turns out we look pretty alike:</p>
-        <div class="image-gri">
+        <div class="image-gr">
         <div class="image-container">
             <img src="proj3images/morph.gif" alt="taj.jpg">
             <p class="image-subtitle">My father to Me</p>
