--- a/project3.html
+++ b/project3.html
@@ -238,6 +238,13 @@
         </div>
         </div>
         <div class="clear-float"></div>
+        <p> Here is the mean face of the population:</p>
+        <div class="image-gr">
+        <div class="image-container">
+            <img src="proj3images/avgface.png" alt="taj.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
         <p> After computing the mean face of the population, I warped Can's face into the average face, and warped the mean face into Can's face:</p>
         <div class="image-gri">
         <div class="image-container">
@@ -262,19 +269,19 @@
         </div>
         <div class="clear-float"></div>
         <h2>Part 6: Bells and Whistles</h2>
-            <p>For this part, my goal is to sharpen images. In order to sharpen an image, I apply Gaussian filter to get the low frequencies of the image. When the low frequencies are substracted from the original image, I get the high frequencies of the image. By adding the high frequencies to the original image, original image can be sharpened. I combines these operations into a single convolution operation which can be formulized convolving each channel of the image with (1 + alpha) * unit_impulse - alpha * gauss_kernel where alpha is the coefficient of the sharpening. </p>
-        <div class="clear-float"></div>
-        <div class="image-gri">
+        <p>I completed two Bells and Whistles. For the first one, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
+                <div class="image-gri">
         <div class="image-container">
-            <img src="proj2images/taj.jpg" alt="taj.jpg">
-            <p class="image-subtitle">Taj Mahal</p>
+            <img src="proj3images/womanavg.png" alt="taj.jpg">
+            <p class="image-subtitle">Mean Woman Face</p>
         </div>
         <div class="image-container">
-            <img src="proj2images/taj_sharp.jpg" alt="taj_sharp.jpg">
+            <img src="proj3images/taj_sharp.jpg" alt="taj_sharp.jpg">
             <p class="image-subtitle">Sharpened Taj Mahal, alpha = 1</p>
         </div>
         </div>
         <div class="clear-float"></div>
+        <p>I also made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect:</p>
     </div>
 </body>
 </html>
