--- a/project3.html
+++ b/project3.html
@@ -261,7 +261,7 @@
         <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
-            <img src="proj2images/alpha1_7.png" alt="taj.jpg">
+            <img src="proj3images/alpha1_7.png" alt="taj.jpg">
         </div>
         <div class="image-container">
             <img src="proj3images/alpha_0_7.png" alt="taj_sharp.jpg">
@@ -270,14 +270,22 @@
         <div class="clear-float"></div>
         <h2>Part 6: Bells and Whistles</h2>
         <p>I completed two Bells and Whistles. For the first one, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
-                <div class="image-gri">
+        <div class="image-gri">
         <div class="image-container">
             <img src="proj3images/womanavg.png" alt="taj.jpg">
             <p class="image-subtitle">Mean Woman Face</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/taj_sharp.jpg" alt="taj_sharp.jpg">
-            <p class="image-subtitle">Sharpened Taj Mahal, alpha = 1</p>
+            <img src="proj3images/can_shape.jpg" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Shape only</p>
+        </div>
+        <div class="image-container">
+            <img src="proj3images/can_appear.jpg" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Appearance only</p>
+        </div>
+        <div class="image-container">
+            <img src="proj3images/can_both.jpg" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Both</p>
         </div>
         </div>
         <div class="clear-float"></div>
