--- a/project3.html
+++ b/project3.html
@@ -276,15 +276,15 @@
             <p class="image-subtitle">Mean Woman Face</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/can_shape.jpg" alt="taj_sharp.jpg">
+            <img src="proj3images/can_shape.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Shape only</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/can_appear.jpg" alt="taj_sharp.jpg">
+            <img src="proj3images/can_appear.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Appearance only</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/can_both.jpg" alt="taj_sharp.jpg">
+            <img src="proj3images/can_both.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Both</p>
         </div>
         </div>
