--- a/project3.html
+++ b/project3.html
@@ -272,7 +272,7 @@
         <p>I completed two Bells and Whistles. For the first one, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
         <div class="image-gri">
         <div class="image-container">
-            <img src="proj3images/womanavg.png" alt="taj.jpg">
+            <img src="proj3images/womanavg.jpg" alt="taj.jpg">
             <p class="image-subtitle">Mean Woman Face</p>
         </div>
         <div class="image-container">
