--- a/project3.html
+++ b/project3.html
@@ -289,7 +289,8 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <p>I also made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect:</p>
+        <p>I also made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. Here is the link:</p>
+        <p> https://youtube.com/shorts/fSUGH-g0eA8?feature=share </p>
     </div>
 </body>
 </html>
