--- a/project3.html
+++ b/project3.html
@@ -290,7 +290,7 @@
         </div>
         <div class="clear-float"></div>
         <p>I also made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. Here is the link:</p>
-        <p> https://youtube.com/shorts/fSUGH-g0eA8?feature=share </p>
+        <a href="URL">https://youtu.be/4YwmFifFEhw</a>
     </div>
 </body>
 </html>
