--- a/project3.html
+++ b/project3.html
@@ -276,7 +276,7 @@
             <p class="image-subtitle">Mean Woman Face</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/can_shape.png" alt="taj_sharp.jpg">
+            <img src="proj3images/warp_can_w.png" alt="taj_sharp.jpg">
             <p class="image-subtitle">Shape only</p>
         </div>
         <div class="image-container">
