--- a/project3.html
+++ b/project3.html
@@ -290,7 +290,7 @@
         </div>
         <div class="clear-float"></div>
         <p>I also made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. Here is the link:</p>
-        <a href="URL">https://youtu.be/4YwmFifFEhw</a>
+        <iframe width="560" height="315" src="https://youtu.be/4YwmFifFEhw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
