--- a/project3.html
+++ b/project3.html
@@ -290,8 +290,7 @@
         </div>
         <div class="clear-float"></div>
         <p>I also made a video of myself at different ages. There are 13 different pictures of myself that are morphed sequentially to produce aging effect. Here is the link:</p>
-        <a href="https://youtu.be/4YwmFifFEhw">
-        </a>
+        <a href="https://youtu.be/4YwmFifFEhw"> Link to my video</a>
     </div>
 </body>
 </html>
